HelloUltraviolet/Fixtures/RejectedSource/Procedures/ProcedureDeclarationWellFormedness/Source/Main.uv
//! Rejected procedure specimen for declaration well-formedness.

public procedure procedureDeclarationWellFormednessReference() -> i32 {
    let value: i32 = 1
    value
}
